--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import '../src/utils/variables.scss';
+
 body {
   margin: 0;
   display: flex;
@@ -5,33 +7,25 @@ body {
   min-width: 320px;
   min-height: 100dvh;
 
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
+  font-family: $secondary-font-family;
+  font-size: 1rem;
+  line-height: 1.5rem;
   font-weight: 400;
 
-  color: rgba(209, 124, 124, 0.87);
-  background-color: #242424;
+  color: $primary-color;
+  background-color: $secondary-color;
 }
 
 a {
-  color: #646cff;
   text-decoration: inherit;
 }
 
 h1 {
+  font-family: $primary-font-family;
   font-size: 3.2em;
   line-height: 1.1;
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+  border-radius: 0.5rem;
 }
