--- a/src/utils/_variables.scss
+++ b/src/utils/_variables.scss
@@ -18,10 +18,17 @@
 }
 
 // fonts
+
 $primary-font-family: 'Futura';
 $secondary-font-family: 'Poppins';
+
+$very-small-size: 0.65rem;
+$small-size: 1rem;
+$medium-size: 1.5rem;
+$large-size: 2rem;
 
 // colors
 $primary-color: #121216;
 $secondary-color: #ffffff;
 $highlight-color: #7c5656;
+$shades-gray: #797979;
