--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -4,13 +4,15 @@
   width: 100%;
   height: 100px;
   margin: 0 auto;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background: transparent;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: $primary-color;
+  z-index: 100;
 
   &-logo {
     margin-left: 1.5rem;
@@ -54,25 +56,7 @@
     justify-content: space-between;
 
     &--links {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
       width: 200px;
-
-      svg {
-        cursor: pointer;
-        path {
-          fill: $secondary-color;
-          transition: all ease-out 0.2s;
-        }
-      }
-
-      svg:hover {
-        path {
-          fill: $highlight-color;
-          transition: all ease-out 0.2s;
-        }
-      }
     }
 
     &--cta {
@@ -128,13 +112,14 @@
     position: absolute;
     top: 0;
     left: 0;
-    margin-top: 150px;
     height: 100dvh;
     width: 100%;
     background-color: $primary-color;
     transform: scaleY(0);
     transform-origin: top;
     transition: all ease-in-out 0.5s;
+    margin-top: 90px;
+    z-index: 99;
 
     &--links {
       display: flex;
@@ -144,11 +129,13 @@
       list-style: none;
       padding: 0;
       height: 350px;
+      margin-top: 100px;
 
       &-item {
         display: flex;
         flex-direction: column;
-        gap: 1.5rem;
+        justify-content: space-between;
+        height: 50px;
 
         a {
           font-family: $primary-font-family;
@@ -189,7 +176,7 @@
 
   .show-menu {
     transform: scaleY(1);
-    transform-origin: bottom;
-    transition: all ease-in-out 0.5s;
+    transform-origin: top bottom;
+    transition: all ease-in-out 0.4s;
   }
 }
