--- a/src/index.scss
+++ b/src/index.scss
@@ -4,8 +4,8 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100dvh;
+  width: 100dvw;
+  height: 100dvh;
 
   font-family: $secondary-font-family;
   font-size: 1rem;
@@ -14,6 +14,11 @@ body {
 
   color: $secondary-color;
   background-color: $primary-color;
+
+  #root {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 a {
@@ -28,5 +33,12 @@ h1 {
 }
 
 button {
+  font-size: $very-small-size;
   border-radius: 0.5rem;
+  font-weight: bold;
+}
+
+label {
+  font-size: $very-small-size;
+  color: $secondary-color;
 }
