--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -136,6 +136,7 @@
         flex-direction: column;
         justify-content: space-between;
         height: 50px;
+        // clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 
         a {
           font-family: $primary-font-family;
@@ -151,7 +152,7 @@
         }
 
         .underline {
-          width: 30px;
+          width: 55px;
           height: 5px;
           border-radius: 8px;
           background-color: $highlight-color;
