--- a/src/components/mouse-follow/mouse-follow.scss
+++ b/src/components/mouse-follow/mouse-follow.scss
@@ -1,6 +1,7 @@
 @import '../../utils/variables';
 
 .mouse-follow {
+  position: relative;
   width: 50px;
   height: 50px;
   position: fixed;
@@ -10,4 +11,25 @@
   border-radius: 50%;
   pointer-events: none;
   z-index: 100;
+
+  &--video {
+    width: 120px;
+    height: 120px;
+    background-color: $highlight-color;
+    border: 1px solid $secondary-color;
+    transition: all 0.5 ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    pointer-events: all;
+  }
+
+  &--play {
+    visibility: hidden;
+    width: 15px;
+    height: 15px;
+    background-color: $secondary-color;
+    clip-path: polygon(100% 50%, 0 0, 0 100%);
+  }
 }
