--- a/src/components/work/work.scss
+++ b/src/components/work/work.scss
@@ -20,7 +20,7 @@
       width: 55px;
       height: 5px;
       border-radius: 8px;
-      background-color: #7c5656;
+      background-color: $highlight-color;
       transform: scaleX(1);
       transition: all 0.2s ease-in;
 
