--- a/src/index.scss
+++ b/src/index.scss
@@ -8,13 +8,12 @@ body {
   height: 100dvh;
 
   font-family: $secondary-font-family;
-  font-size: 1rem;
-  line-height: 1.5rem;
+  font-size: $paragraph-one-size;
+  line-height: normal;
   font-weight: 400;
 
   color: $secondary-color;
   background-color: $primary-color;
-
   #root {
     width: 100%;
     height: 100%;
@@ -28,17 +27,18 @@ a {
 
 h1 {
   font-family: $primary-font-family;
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: $heading-size;
+  letter-spacing: $heading-letter-spacing;
+  margin: 0;
 }
 
 button {
-  font-size: $very-small-size;
+  font-size: $paragraph-two-size;
   border-radius: 0.5rem;
   font-weight: bold;
 }
 
 label {
-  font-size: $very-small-size;
+  font-size: $paragraph-two-size;
   color: $secondary-color;
 }
