--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,107 +1,167 @@
 @import '../../utils/variables';
 
+.hero-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 1050px;
+  background-image: url('../../assets/images/berlin.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: right;
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
+  opacity: 0.3;
+  z-index: -1;
+
+  &--gradient {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 1050px;
+    z-index: -1;
+    background: linear-gradient(
+      transparent,
+      $primary-color
+    );
+  }
+}
+
 .hero {
   position: relative;
   width: 100%;
-  height: 600px;
+  height: 720px;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  padding: 170px 0 150px;
+  justify-content: flex-end;
 
-  &-left {
-    height: auto;
+  &-title {
+    width: 464px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: space-between;
+    transform: translateY(35px);
 
-    &--title {
-      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    h1 {
+      font-size: 5rem;
+      text-transform: uppercase;
+    }
 
-      &-top {
-        h1 {
-          letter-spacing: 2px;
-          text-transform: uppercase;
-        }
-
-        h1:first-child {
-          border: 1px solid $secondary-color;
-          padding: 10px 25px;
-          width: fit-content;
+    &:hover {
+      .hero-title--name {
+        ::after {
+          content: 'Trained';
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          color: $highlight-color;
+          animation: show-title 0.3s ease-in-out forwards;
         }
       }
 
-      &-sub {
-        width: 60%;
-        line-height: 30px;
-        p {
-          font-weight: lighter;
-          b {
-            color: $highlight-color;
-          }
+      .hero-title--surname {
+        ::after {
+          content: 'Actor';
+          position: absolute;
+          bottom: 0;
+          left: 0;
+          color: $highlight-color;
+          animation: show-title 0.3s ease-in-out forwards;
         }
       }
     }
 
-    &--ctas {
-      padding-top: 100px;
+    &--name {
+      position: relative;
+      clip-path: polygon(0 100%, 100% 100%, 100% 0, 0 0);
+
+      h1 {
+        opacity: 0.3;
+      }
+    }
+
+    &--surname {
+      clip-path: polygon(0 100%, 100% 100%, 100% 0, 0 0);
+
+      h1 {
+        opacity: 0.5;
+      }
     }
   }
 
-  &-right {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
+  &-cta {
+    position: absolute;
+    bottom: -65px;
+    left: 44.5%;
+    opacity: 0;
+    z-index: 2;
+  }
 
-    &--image {
-      position: relative;
-      width: 435px;
-      height: auto;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-      clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  &-image {
+    position: relative;
+    width: 400px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    transform: translateY(4px);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 
-      &-overlay {
-        width: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        clip-path: circle(80px at var(--x, 0) var(--y, 0));
-        transition: all 0.5s linear;
-
-        &:hover {
-          clip-path: circle(
-            100% at var(--x, 0) var(--y, 0)
-          );
-          transition: all 0.5s linear;
-        }
-      }
-
-      img {
-        width: 100%;
-      }
+    img {
+      width: 100%;
+      filter: contrast(125%);
+      z-index: 1;
     }
 
-    &--box {
-      svg {
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        height: 610px;
-        transform: translate(20%, -24%);
-        z-index: -1;
+    &--overlay {
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      clip-path: circle(80px at var(--x, 0) var(--y, 0));
+      transition: all 0.8s linear;
+      z-index: 1;
+
+      &:hover {
+        clip-path: circle(100% at var(--x, 0) var(--y, 0));
+        transition: all 0.8s linear;
+      }
+    }
+  }
+
+  &-underline {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+    opacity: 0.5;
+  }
+
+  &-links {
+    height: 150px;
+    width: 24px;
+    position: absolute;
+    bottom: 25px;
+    left: 0;
+
+    .social {
+      flex-direction: column;
+
+      a {
+        opacity: 0;
       }
     }
   }
 
   &-scroll {
     position: absolute;
-    bottom: 0;
+    bottom: 25px;
     right: 0;
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
-    transform: translate(100%, -52%);
-    opacity: 0.5;
 
     &--line {
       svg {
@@ -115,71 +175,73 @@
 
       p {
         margin: 0;
+        opacity: 0.6;
+        letter-spacing: 2px;
         text-transform: uppercase;
         font-size: 0.75rem;
         font-weight: lighter;
       }
     }
   }
-
-  &-circles {
-    position: absolute;
-    left: -50%;
-    top: 10%;
-    opacity: 0.3;
-    z-index: -1;
-
-    svg {
-      position: absolute;
-      top: 0;
-      left: 0;
-      opacity: 0.1;
-    }
-  }
 }
 
 .show {
   .hero {
-    &-left {
-      &--title {
-        &-top {
-          animation: show-left 0.5s ease-in-out forwards;
-        }
-
-        &-sub {
-          animation: show-left 0.7s ease-in-out forwards;
+    &-title {
+      &--name {
+        h1 {
+          animation: show-title 1.3s ease-in-out forwards;
         }
       }
 
-      &--ctas {
-        animation: show-left 0.6s ease-in-out forwards;
+      &--surname {
+        h1 {
+          animation: show-title 1.8s ease-in-out forwards;
+        }
       }
     }
 
-    &-right {
-      &--image {
-        img {
-          animation: show-image 0.6s ease-in-out forwards;
-        }
+    &-cta {
+      animation: show-cta 1.3s ease-in-out forwards;
+    }
+
+    &-image {
+      img {
+        animation: show-image 0.8s ease-in-out forwards;
+      }
+    }
+
+    &-underline {
+      animation: show-underline 1.3s linear forwards;
+    }
+
+    &-links {
+      a {
+        animation: show-link 0.5s ease-in-out forwards;
+      }
+
+      a:nth-child(1) {
+        animation-delay: 0.8s;
+      }
+
+      a:nth-child(2) {
+        animation-delay: 0.5s;
+      }
+
+      a:nth-child(3) {
+        animation-delay: 0.3s;
       }
     }
 
     &-scroll {
       &--line {
         svg {
-          animation: loop-mouse 2s ease-in-out infinite;
+          transform: translateY(75px) scale(0.5);
+
+          path:last-child {
+            animation: loop-mouse 2.1s ease-in-out infinite;
+          }
         }
-      }
-    }
-
-    &-circles {
-      svg:first-child {
-        animation: show-small-circle 0.8s ease-in-out
-          forwards;
-      }
-
-      svg:last-child {
-        animation: show-big-circle 0.6s ease-in-out forwards;
       }
     }
   }
@@ -187,141 +249,160 @@
 
 .hide {
   .hero {
-    &-left {
-      &--title {
-        &-top {
-          animation: show-left 0.5s ease-in-out forwards;
-        }
-
-        &-sub {
-          animation: show-left 0.7s ease-in-out forwards;
-        }
-      }
-
-      &--ctas {
-        animation: hide-left 0.6s ease-in-out forwards;
+    &-title {
+      h1 {
+        animation: hide-title 0.8s ease-in-out forwards;
       }
     }
 
-    &-right {
-      &--image {
-        img {
-          animation: hide-image 0.6s ease-in-out forwards;
-        }
+    &-cta {
+      animation: hide-cta 1.3s ease-in-out forwards;
+    }
+
+    &-image {
+      img {
+        animation: hide-image 0.8s ease-in-out forwards;
       }
     }
 
-    &-scroll {
-      &--line {
-        svg {
-          animation: loop-mouse 2s ease-in-out infinite;
-        }
-      }
+    &-underline {
+      animation: hide-underline 1.3s linear forwards;
     }
 
-    &-circles {
-      svg:first-child {
-        animation: hide-small-circle 0.8s ease-in-out
-          forwards;
+    &-links {
+      a {
+        animation: hide-link 0.5s ease-in-out forwards;
       }
 
-      svg:last-child {
-        animation: hide-big-circle 0.6s ease-in-out forwards;
+      a:nth-child(1) {
+        animation-delay: 0.8s;
+      }
+
+      a:nth-child(2) {
+        animation-delay: 0.5s;
+      }
+
+      a:nth-child(3) {
+        animation-delay: 0.3s;
       }
     }
   }
 }
 
-@keyframes show-left {
+@keyframes show-title {
   0% {
-    transform: translateX(-50%);
+    transform: translateY(100%);
   }
 
   100% {
-    transform: translateX(0);
+    transform: translateY(0%);
   }
 }
 
 @keyframes show-image {
   0% {
-    transform: translateX(150%);
+    transform: translateY(150%);
   }
 
   100% {
-    transform: translateX(0);
+    transform: translateY(0);
   }
 }
 
-@keyframes show-small-circle {
+@keyframes show-cta {
   0% {
-    transform: scale(0) translateX(-50%);
+    opacity: 0;
+    transform: translateY(100px);
   }
 
   100% {
-    transform: scale(0.9) translateX(0);
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
-@keyframes show-big-circle {
+@keyframes show-underline {
   0% {
-    transform: scale(0) translateX(-50%);
+    transform: scaleX(0);
   }
 
   100% {
-    transform: scale(1) translateX(0);
+    transform: scaleX(1);
   }
 }
 
-@keyframes hide-left {
+@keyframes show-link {
   0% {
-    transform: translateX(0);
+    opacity: 0;
   }
 
   100% {
-    transform: translateX(-50%);
+    opacity: 1;
+  }
+}
+
+@keyframes hide-title {
+  0% {
+    transform: translateY(0);
+  }
+
+  100% {
+    transform: translateY(100%);
   }
 }
 
 @keyframes hide-image {
   0% {
-    transform: translateX(0);
+    transform: translateY(0);
   }
 
   100% {
-    transform: translateX(150%);
+    transform: translateY(150%);
   }
 }
 
-@keyframes hide-small-circle {
+@keyframes hide-cta {
   0% {
-    transform: scale(0.9) translateX(0);
+    transform: translateY(65px);
+    opacity: 1;
   }
 
   100% {
-    transform: scale(0) translateX(-50%);
+    transform: translateY(100px);
+    opacity: 0;
   }
 }
 
-@keyframes hide-big-circle {
+@keyframes hide-underline {
   0% {
-    transform: scale(1) translateX(0);
+    transform: scaleX(1);
   }
 
   100% {
-    transform: scale(0) translateX(-50%);
+    transform: scaleX(0);
+  }
+}
+
+@keyframes hide-link {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
   }
 }
 
 @keyframes loop-mouse {
   0% {
-    transform: translateY(75px) scale(0.5);
+    transform: translateY(0);
   }
 
   50% {
-    transform: translateY(75px) scale(0.6);
+    transform: translateY(50%);
   }
 
   100% {
-    transform: translateY(75px) scale(0.5);
+    transform: translateY(0);
   }
 }
