--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,20 +1,19 @@
 @import '../../utils/variables.scss';
 
 .header {
-  width: 100%;
+  width: 90%;
   height: 100px;
-  margin: 0 auto;
+  margin: 0 5% 0;
   position: fixed;
   top: 0;
   left: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: $primary-color;
+  background: transparent;
   z-index: 100;
 
   &-logo {
-    margin-left: 1.5rem;
     width: 32px;
     height: 47px;
     cursor: pointer;
@@ -48,131 +47,48 @@
     }
   }
 
-  &-right {
-    width: 55%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  &-toggle {
+    margin-right: 1.5rem;
 
-    &--links {
-      width: 200px;
-    }
-
-    &--icon {
-      margin-right: 1.5rem;
-
-      button {
-        cursor: pointer;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 4rem;
-        height: 4rem;
-        border: 0;
-        background: transparent;
-        gap: 2rem;
-
-        > div {
-          background: $secondary-color;
-          height: 2px;
-          width: 100%;
-          border-radius: 8px;
-          transition: all 0.5s;
-          transform-origin: left;
-
-          &:last-child {
-            transform: scaleX(0.5);
-            transform-origin: right;
-          }
-        }
-      }
-
-      .clicked {
-        div:first-child {
-          transform: rotate(45deg);
-          transform-origin: left top;
-          transition: all 0.5s;
-        }
-
-        div:last-child {
-          transform: scaleX(1) rotate(-45deg);
-          transform-origin: left bottom;
-          transition: all 0.5s;
-        }
-      }
-    }
-  }
-
-  &-menu {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100dvh;
-    width: 100%;
-    background-color: $primary-color;
-    transform: scaleY(0);
-    transform-origin: top;
-    transition: all ease-in-out 0.5s;
-    margin-top: 90px;
-    z-index: 99;
-
-    &--links {
+    button {
+      cursor: pointer;
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
-      justify-content: space-between;
-      list-style: none;
-      padding: 0;
-      height: 500px;
-      margin-top: 100px;
+      align-items: center;
+      justify-content: center;
+      width: 4rem;
+      height: 4rem;
+      border: 0;
+      background: transparent;
+      gap: 2rem;
 
-      &-item {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        height: 50px;
+      > div {
+        background: $secondary-color;
+        height: 3px;
+        width: 100%;
+        border-radius: 8px;
+        transition: all 0.5s;
+        transform-origin: left;
 
-        a {
-          font-family: $primary-font-family;
-          font-weight: bold;
-          font-size: 3rem;
-          color: $secondary-color;
-          transition: all ease-in-out 0.2s;
-
-          &:hover {
-            color: $highlight-color;
-            transition: all ease-in-out 0.2s;
-          }
-        }
-
-        &--underline {
-          width: 55px;
-          height: 5px;
-          border-radius: 8px;
-          background-color: $highlight-color;
+        &:last-child {
+          transform: scaleX(0.5);
+          transform-origin: left;
         }
       }
     }
 
-    &--separator {
-      width: 100%;
-      height: 1px;
-      border-radius: 8px;
-      background-color: $secondary-color;
-      margin-top: 50px;
-    }
+    .clicked {
+      div:first-child {
+        transform: rotate(45deg);
+        transform-origin: left top;
+        transition: all 0.5s;
+      }
 
-    svg {
-      position: absolute;
-      bottom: 0;
-      right: 0;
+      div:last-child {
+        transform: scaleX(1) rotate(-45deg);
+        transform-origin: left bottom;
+        transition: all 0.5s;
+      }
     }
-  }
-
-  .show-menu {
-    transform: scaleY(1);
-    transform-origin: top bottom;
-    transition: all ease-in-out 0.4s;
   }
 }
